# disinfection-robot

./: .gitignore  frames_2025-04-07_19.48.24.gv
disinfectbot_control/: CMakeLists.txt  package.xml
disinfectbot_control/config/: ros2_control.yaml
disinfectbot_control/launch/: ros2_control.launch.py
disinfectbot_description/: CMakeLists.txt  package.xml  ros2_control.launch.py
disinfectbot_description/config/: nav2.yaml
disinfectbot_description/launch/: robot_description.launch.py
disinfectbot_description/urdf/: common.urdf.xacro
disinfectbot_description/urdf/base/: base.urdf.xacro  layer1.urdf.xacro
disinfectbot_description/urdf/control/: ros2_control.urdf.xacro
disinfectbot_description/urdf/devices/: rplidar.urdf.xacro  uv_lamp.urdf.xacro
disinfectbot_description/urdf/robots/: disinfectbot.urdf.xacro
disinfectbot_description/urdf/utils/: l_bracket.urdf.xacro
disinfectbot_gazebo/: CMakeLists.txt  package.xml
disinfectbot_gazebo/launch/: disinfectbot_gz_sim.launch.py  disinfectbot_spawn.launch.py  gz_sim.launch.py  ros_gz_bridge.launch.py
disinfectbot_gazebo/models/bpcart/: model.sdf
disinfectbot_gazebo/models/cgmclassic/: model.sdf
disinfectbot_gazebo/models/elderladypatient/: model.sdf
disinfectbot_gazebo/models/femalevisitor/: model.sdf
disinfectbot_gazebo/models/femalevisitorsit/: model.sdf
disinfectbot_gazebo/models/malevisitoronphone/: model.sdf
disinfectbot_gazebo/models/patientfsit/: model.sdf
disinfectbot_gazebo/models/patientwheelchair/: model.sdf
disinfectbot_gazebo/models/scrubs/: model.sdf
disinfectbot_gazebo/models/storagerackcovered/: model.sdf
disinfectbot_gazebo/models/surgicaltrolley/: model.sdf
disinfectbot_gazebo/models/trolleybed/: model.sdf
disinfectbot_gazebo/models/trolleybedpatient/: model.sdf
disinfectbot_gazebo/models/xraymachine/: model.sdf
disinfectbot_gazebo/worlds/: hospital.sdf
disinfectbot_hardware/: CMakeLists.txt  disinfectbot_hardware_plugin.xml  package.xml
disinfectbot_hardware/include/disinfectbot_hardware/: arduino_comm.hpp  disinfectbot_system.hpp
disinfectbot_hardware/src/: disinfectbot_system.cpp
disinfectbot_nav/: CMakeLists.txt  package.xml
disinfectbot_nav/config/: nav2.yaml  slam.yaml
disinfectbot_nav/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
disinfectbot_nav/maps/: hospital_map.pgm  hospital_map.yaml
disinfectbot_rviz/: CMakeLists.txt  package.xml
disinfectbot_rviz/config/: disinfectbot.rviz
disinfectbot_rviz/launch/: rviz.launch.py
eddiebot_description/: CMakeLists.txt  eddiebot_description.xml  package.xml
eddiebot_description/config/: diff_drive_controller.yaml
eddiebot_description/hardware/: diffbot_system.cpp
eddiebot_description/hardware/include/eddiebot_description/: arduino_comms.hpp  diffbot_system.hpp
eddiebot_description/launch/: navigation_launch.py  robot_description.launch.py
eddiebot_description/meshes/: Lamp1.stl  Lamp2.stl
eddiebot_description/urdf/robots/: eddiebot.urdf.xacro  lamp.urdf.xacro
eddiebot_description/urdf/sensors/: kinect_v1.urdf.xacro  rgbd_sensor.urdf.xacro  rplidar.urdf.xacro
eddiebot_description/urdf/stacks/: base.urdf.xacro  camera_stand.urdf.xacro
eddiebot_description/urdf/utils/: inertials.urdf.xacro  l_bracket.urdf.xacro  uv_lamp.urdf.xacro
eddiebot_gazebo/: CMakeLists.txt
eddiebot_gazebo/launch/: eddiebot_gz_sim.launch.py  eddiebot_spawn.launch.py  gz_sim.launch.py  ros_gz_bridge.launch.py
eddiebot_gazebo/models/anesthesiamachine/: model.sdf
eddiebot_gazebo/models/bloodpressuremonitor/: model.sdf
eddiebot_gazebo/models/bmwcart/: model.sdf
eddiebot_gazebo/models/coke/: model.sdf
eddiebot_gazebo/models/eldermalepatient/: model.sdf
eddiebot_gazebo/models/instrumentcart1/: model.sdf
eddiebot_gazebo/models/instrumentcart2/: model.sdf
eddiebot_gazebo/models/ivstand/: model.sdf
eddiebot_nav/config/: nav2.yaml
eddiebot_nav/launch/: rtabmap.launch.py
eddiebot_test/: package.xml  setup.cfg  setup.py
eddiebot_test/eddiebot_test/: map_builder.py  simple_node.py
goal_stamper/: package.xml  setup.cfg  setup.py
goal_stamper/goal_stamper/: goal_zero_stamper.py
mock_uv_controller/: package.xml  setup.cfg  setup.py
mock_uv_controller/mock_uv_controller/: mock_uv_controller.py
mock_uv_hardware/: CMakeLists.txt  mock_uv_hardware_plugin.xml  package.xml
mock_uv_hardware/src/: mock_uv_system.cpp
rtabmap_demos/: local_setup.sh
rtabmap_demos/cmake/: rtabmap_demosConfig.cmake
rtabmap_examples/: local_setup.sh
rtabmap_examples/cmake/: rtabmap_examplesConfig.cmake
statistics_move/: package.xml  setup.cfg  setup.py
statistics_move/statistics_move/: stats_distance.py  stats_time.py  stats_waypoints.py
statistics_uv/: package.xml  setup.cfg  setup.py
statistics_uv/statistics_uv/: stats_dose.py  stats_time.py
stats_move/: package.xml  setup.cfg  setup.py
stats_move/stats_move/: stats_distance.py  stats_time.py
stats_msgs/: CMakeLists.txt  package.xml
stats_msgs/srv/: SaveToFileRequest.srv
stats_uv/: package.xml  setup.cfg  setup.py
stats_uv/stats_uv/: stats_dose.py  stats_pos.py  stats_time.py
uv_common/: package.xml  setup.cfg  setup.py
uv_common/uv_common/: irradiance.py  tf_utils.py
uv_controller/: CMakeLists.txt  package.xml  uv_controller_plugin.xml
uv_controller/include/uv_controller/: uv_controller.hpp
uv_controller/src/: uv_controller.cpp
uv_coverage_2d/: package.xml  setup.cfg  setup.py
uv_exposure/: package.xml  setup.cfg  setup.py
uv_exposure/uv_exposure/: dose_to_costmap.py  dose_tracker.py
uv_exposure_2d/: package.xml  setup.cfg  setup.py
uv_exposure_2d/uv_exposure_2d/: dose_accumulator.py  dose_publisher.py  dose_visualizer.py  surface_filter.py
uv_exposure_msgs/: CMakeLists.txt  package.xml
uv_exposure_msgs/msg/: DoseGrid.msg  UVStateStamped.msg
uv_msgs/: CMakeLists.txt  package.xml
uv_msgs/msg/: DoseSparseGrid.msg  DoseSparseGridUpdate.msg  UVStateStamped.msg
uv_waypoint_executor/: CMakeLists.txt  package.xml  plugin.xml
uv_waypoint_executor/src/: uv_waypoint_executor.cpp
(+14 files in other folders)
